--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
-<html>
-    <head>
-        <title>
-            Olá, eu dou a cabeça
-        </title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 Eu sou o corpo</h2>
-    </body>
-    <ol>
-        <li>Cafe</li>
-        <li>Leite</li>
-        <li>cha</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Leite</li>
-        <li>cha</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <title>Wying Yang CV</title>
+
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile Image">
+                    <p class="name">Wying Yang</p>
+                    <p class="profession">Software Engineer</p>
+          </div>
+          <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 21 99999-9999</li>
+                        <li><i class="fa fa-envelope"></i>meunome@email.com</li>
+                        <li><i class="fa fa-globe"></i>www.wying.com</li>
+                        <li><i class="fa fa-github"></i>site github</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-tittle">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git, & GitHub</p></li>
+                        <li><p>Pacote Adobe</p></li>
+                        <li><p>Pacote Office</p></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá, eu me chamo Wying Yang.<br/>
+                        <br/>Um pouco mais sobre o que faço 
+                        <br/> Quais são minhas competencias
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>
+</body>
 </html>
