terceiro-commit clear git status stop

--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="Profile Image">
                     <p class="name">Wying Yang</p>
-                    <p class="profession">Software Engineer</p>
+                    <p class="profession">Produtor Cultural e Audiovisual</p>
           </div>
           <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 21 99999-9999</li>
-                        <li><i class="fa fa-envelope"></i>meunome@email.com</li>
-                        <li><i class="fa fa-globe"></i>www.wying.com</li>
-                        <li><i class="fa fa-github"></i>site github</li>
+                        <li><i class="fa fa-phone"></i>+55 21 99984-9217</li>
+                        <li><i class="fa fa-envelope"></i>wyingyang66@email.com</li>
+                        <li><i class="fa fa-globe"></i>https://www.instagram.com/decupandoproducoes/</li>
+                        <li><i class="fa fa-github"></i>https://github.com/TiBaT1</li>
                     </ul>
                 </div>
                 <div class="skills">
                     <p class="left-tittle">Skills</p>
                     <ul>
                         <li><p>HTML, CSS, Git, & GitHub</p></li>
-                        <li><p>Pacote Adobe</p></li>
                         <li><p>Pacote Office</p></li>
+                        <li><p>Pacote Adobe</p></li>
+                        <li><p>Da Vinci Resolve</p></li>
+                        <li><p>Final Cut</p></li>
+                        <li><p>Fotografia</p></li>
+                        <li><p>Roteiro</p></li>
                     </ul>
                 </div>
             </div>
@@ -52,6 +56,51 @@
                     </p>
                 </section>
             </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Contas S.A</p>
+                        <p class="exp-live-period">2014-2014</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Auxiliar de Serviços Gerais</p>
+                        <p class="exp-description">
+                            Atendente receptivo de telemarketing; Abertura e apuração de contestação de contas.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Sesc Copacabana</p>
+                        <p class="exp-live-period">2016-2017</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Jovem Aprendiz</p>
+                        <p class="exp-description">
+                            Assistência a todos os processos de contratação de espetáculos; assistência a curadoria de filmes para Cine-Clube; Organização e armazenamento de documentos; Responsável pela logística de pessoas; Assistência a prestação de contas; Assistência a projetos próprios do Sesc Copacabana.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Caseiras Produções</p>
+                        <p class="exp-live-period">2019-2019</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Estágiario de Produção</p>
+                        <p class="exp-description">
+                            Auxilio na produção de toda a execução do projeto; Captação de imagens para projeção de fundo de cena.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Ponto Cine</p>
+                        <p class="exp-live-period">2020-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Estágiario de Produção</p>
+                        <p class="exp-description">
+                            Auxiliei nas funções burocráticas referente à parceria com patrocinadores e apoiadores; Atuei na pesquisa e inscrições de editais voltados para o setor do audiovisual; Auxiliei na gestão das mídias sociais e organização de conteúdo das redes sociais, como: Instagram, Facebook e Site; Auxiliei na criação das artes de divulgação dos projetos.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
