--- a/index.html
+++ b/index.html
@@ -1,107 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Wying Yang CV</title>
 
-
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <main class="resume-contents">
-        <section class="left-section">
-            <div class="left-section-contents">
-                <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile Image">
-                    <p class="name">Wying Yang</p>
-                    <p class="profession">Produtor Cultural e Audiovisual</p>
+      <section class="left-section">
+        <div class="left-section-contents">
+          <div class="profile">
+            <img
+              class="profile-image"
+              src="img/profile-image.jpg"
+              alt="Profile Image"
+            />
+            <p class="name">Wying Yang</p>
+            <p class="profession">Produtor Cultural e Audiovisual</p>
           </div>
           <div class="contact-info">
-                    <p class="left-title">Contato</p>
-                    <ul>
-                        <li><i class="fa fa-phone"></i>+55 21 99984-9217</li>
-                        <li><i class="fa fa-envelope"></i>wyingyang66@email.com</li>
-                        <li><i class="fa fa-globe"></i>https://www.instagram.com/decupandoproducoes/</li>
-                        <li><i class="fa fa-github"></i>https://github.com/TiBaT1</li>
-                    </ul>
-                </div>
-                <div class="skills">
-                    <p class="left-tittle">Skills</p>
-                    <ul>
-                        <li><p>HTML, CSS, Git, & GitHub</p></li>
-                        <li><p>Pacote Office</p></li>
-                        <li><p>Pacote Adobe</p></li>
-                        <li><p>Da Vinci Resolve</p></li>
-                        <li><p>Final Cut</p></li>
-                        <li><p>Fotografia</p></li>
-                        <li><p>Roteiro</p></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+            <p class="left-title">Contato</p>
+            <ul>
+              <li><i class="fa fa-phone"></i>+55 21 99984-9217</li>
+              <li><i class="fa fa-envelope"></i>wyingyang66@email.com</li>
+              <li>
+                <i class="fa fa-globe"></i
+                >https://www.instagram.com/decupandoproducoes/
+              </li>
+              <li><i class="fa fa-github"></i>https://github.com/TiBaT1</li>
+            </ul>
+          </div>
+          <div class="skills">
+            <p class="left-tittle">Skills</p>
+            <ul>
+              <li><p>HTML, CSS, Git, & GitHub</p></li>
+              <li><p>Pacote Office</p></li>
+              <li><p>Pacote Adobe</p></li>
+              <li><p>Da Vinci Resolve</p></li>
+              <li><p>Final Cut</p></li>
+              <li><p>Fotografia</p></li>
+              <li><p>Roteiro</p></li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-        <section class="right-section">
-            <div class="right-section-contents">
-                <section class="about gap">
-                    <div class="right-title">Sobre Mim</div>
-                    <p class="about-me-contents">
-                        Olá, eu me chamo Wying Yang.<br/>
-                        <br/>Um pouco mais sobre o que faço 
-                        <br/> Quais são minhas competencias
-                    </p>
-                </section>
+      <section class="right-section">
+        <div class="right-section-contents">
+          <section class="about gap">
+            <div class="right-title">Sobre Mim</div>
+            <p class="about-me-contents">
+              Olá, eu me chamo Wying Yang.<br />
+              <br />Um pouco mais sobre o que faço <br />
+              Quais são minhas competencias
+            </p>
+          </section>
+        </div>
+        <section class="experience gap">
+          <div class="right-title">Experiencia</div>
+          <div class="experience-contents">
+            <div class="exp-left">
+              <p class="exp-company-name">Contas S.A</p>
+              <p class="exp-time-period">2014-2014</p>
             </div>
-            <section class="experience gap">
-                <div class="right-title">Experiencia</div>
-                <div class="experience-contents">
-                    <div class="exp-left">
-                        <p class="exp-company-name">Contas S.A</p>
-                        <p class="exp-live-period">2014-2014</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Auxiliar de Serviços Gerais</p>
-                        <p class="exp-description">
-                            Atendente receptivo de telemarketing; Abertura e apuração de contestação de contas.
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Sesc Copacabana</p>
-                        <p class="exp-live-period">2016-2017</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Jovem Aprendiz</p>
-                        <p class="exp-description">
-                            Assistência a todos os processos de contratação de espetáculos; assistência a curadoria de filmes para Cine-Clube; Organização e armazenamento de documentos; Responsável pela logística de pessoas; Assistência a prestação de contas; Assistência a projetos próprios do Sesc Copacabana.
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Caseiras Produções</p>
-                        <p class="exp-live-period">2019-2019</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Estágiario de Produção</p>
-                        <p class="exp-description">
-                            Auxilio na produção de toda a execução do projeto; Captação de imagens para projeção de fundo de cena.
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Ponto Cine</p>
-                        <p class="exp-live-period">2020-2020</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Estágiario de Produção</p>
-                        <p class="exp-description">
-                            Auxiliei nas funções burocráticas referente à parceria com patrocinadores e apoiadores; Atuei na pesquisa e inscrições de editais voltados para o setor do audiovisual; Auxiliei na gestão das mídias sociais e organização de conteúdo das redes sociais, como: Instagram, Facebook e Site; Auxiliei na criação das artes de divulgação dos projetos.
-                        </p>
-                    </div>
-                </div>
-            </section>
+            <div class="exp-right">
+              <p class="exp-position">Auxiliar de Serviços Gerais</p>
+              <p class="exp-description">
+                Atendente receptivo de telemarketing; Abertura e apuração de
+                contestação de contas.
+              </p>
+            </div>
+            <div class="exp-left">
+              <p class="exp-company-name">Sesc Copacabana</p>
+              <p class="exp-time-period">2016-2017</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Jovem Aprendiz</p>
+              <p class="exp-description">
+                Assistência a todos os processos de contratação de espetáculos;
+                assistência a curadoria de filmes para Cine-Clube; Organização e
+                armazenamento de documentos; Responsável pela logística de
+                pessoas; Assistência a prestação de contas; Assistência a
+                projetos próprios do Sesc Copacabana.
+              </p>
+            </div>
+            <div class="exp-left">
+              <p class="exp-company-name">Caseiras Produções</p>
+              <p class="exp-time-period">2019-2019</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Estágiario de Produção</p>
+              <p class="exp-description">
+                Auxilio na produção de toda a execução do projeto; Captação de
+                imagens para projeção de fundo de cena.
+              </p>
+            </div>
+            <div class="exp-left">
+              <p class="exp-company-name">Ponto Cine</p>
+              <p class="exp-time-period">2020-2020</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Estágiario de Produção</p>
+              <p class="exp-description">
+                Auxiliei nas funções burocráticas referente à parceria com
+                patrocinadores e apoiadores; Atuei na pesquisa e inscrições de
+                editais voltados para o setor do audiovisual; Auxiliei na gestão
+                das mídias sociais e organização de conteúdo das redes sociais,
+                como: Instagram, Facebook e Site; Auxiliei na criação das artes
+                de divulgação dos projetos.
+              </p>
+            </div>
+          </div>
         </section>
+        <section class="education gap">
+          <div class="right-title">Formação Acadêmica</div>
+          <div class="education-contents">
+            <div class="education-left">
+              <p class="education-school-name">Ensino</p>
+              <p class="education-time-period">2021-2023</p>
+            </div>
+            <div class="education-right">
+              <p class="education-subject">Formação</p>
+              <p class="education-desc">descrição</p>
+            </div>
+          </div>
+        </section>
+      </section>
     </main>
-</body>
+  </body>
 </html>
