--- a/index.html
+++ b/index.html
@@ -120,13 +120,29 @@
           <div class="right-title">Formação Acadêmica</div>
           <div class="education-contents">
             <div class="education-left">
-              <p class="education-school-name">Ensino</p>
-              <p class="education-time-period">2021-2023</p>
+              <p class="education-school-name">IFRJ - Nilópolis</p>
+              <p class="education-time-period">2016-Presente</p>
             </div>
             <div class="education-right">
-              <p class="education-subject">Formação</p>
-              <p class="education-desc">descrição</p>
+              <p class="education-subject">Produção Cultural</p>
+              <p class="education-desc">Bacharelado em Produção Cultural</p>
             </div>
+            <div class="education-left">
+                <p class="education-school-name">SENAC-RIO</p>
+                <p class="education-time-period">2016-2017</p>
+              </div>
+              <div class="education-right">
+                <p class="education-subject">Auxiliar Administrativo</p>
+                <p class="education-desc">Curso Técnico</p>
+              </div>
+              <div class="education-left">
+                <p class="education-school-name">IFRJ - Nilópolis / Ponto Cine</p>
+                <p class="education-time-period">2019-2019</p>
+              </div>
+              <div class="education-right">
+                <p class="education-subject">Direção Audiovisual</p>
+                <p class="education-desc">Curso de Extensão</p>
+              </div>
           </div>
         </section>
       </section>
