--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
           </div>
           <div class="skills">
-            <p class="left-tittle">Skills</p>
+            <p class="left-title">Skills</p>
             <ul>
               <li><p>HTML, CSS, Git, & GitHub</p></li>
               <li><p>Pacote Office</p></li>
@@ -129,29 +129,49 @@
               <p class="education-desc">Bacharelado em Produção Cultural</p>
             </div>
             <div class="education-left">
-                <p class="education-school-name">SENAC-RIO</p>
-                <p class="education-time-period">2016-2017</p>
+                <p class="education-school-name">UFF - Praia Vermelha</p>
+                <p class="education-time-period">2014 - 2015 (interrompido)</p>
               </div>
               <div class="education-right">
-                <p class="education-subject">Auxiliar Administrativo</p>
-                <p class="education-desc">Curso Técnico</p>
+                <p class="education-subject">Física</p>
+                <p class="education-desc">Licenciatura em Física</p>
               </div>
               <div class="education-left">
-                <p class="education-school-name">IFRJ - Nilópolis / Ponto Cine</p>
-                <p class="education-time-period">2019-2019</p>
+                <p class="education-school-name">UFF - Valonguinho</p>
+                <p class="education-time-period">2014 - 2014 (interrompido)</p>
               </div>
               <div class="education-right">
-                <p class="education-subject">Direção Audiovisual</p>
-                <p class="education-desc">Curso de Extensão</p>
+                <p class="education-subject">Matemática</p>
+                <p class="education-desc">Bacharelado em Matemática</p>
               </div>
-              <p class="education-school-name">Ensino</p>
-              <p class="education-time-period">2021-2023</p>
-            </div>
-            <div class="education-right">
-              <p class="education-subject">Formação</p>
-              <p class="education-desc">descrição</p>
-            </div>
           </div>
+        </section>
+        <section class="awards gap">
+          <div class="right-title">Cursos
+
+          </div>
+            <div class="awards-contents">
+              <div class="awards-left">
+                <p class="awards-company-name">SENAC-RIO</p>
+                <p class="awards-time-period">2016-2017</p>
+              </div>
+              <div class="awards-right">
+                <p class="awards-name">Auxiliar Administrativo</p>
+                <p class="awards-desc">
+                  Curso Técnico
+                </p>
+              </div>
+              <div class="awards-left">
+                <p class="awards-company-name">IFRJ - Nilópolis / Ponto Cine</p>
+                <p class="awards-time-period">2019-2019</p>
+              </div>
+              <div class="awards-right">
+                <p class="awards-name">Direção Audiovisual</p>
+                <p class="awards-desc">
+                  Curso de Extensão
+                </p>
+              </div>
+            </div>
         </section>
       </section>
     </main>
