feature: css style (#8)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 
     <title>Wying Yang CV</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -25,13 +39,11 @@
           <div class="contact-info">
             <p class="left-title">Contato</p>
             <ul>
-              <li><i class="fa fa-phone"></i>+55 21 99984-9217</li>
+              <li><i class="fa fa-phone"></i>+55 21 99984-9217</a></li>
               <li><i class="fa fa-envelope"></i>wyingyang66@email.com</li>
-              <li>
-                <i class="fa fa-globe"></i
-                >https://www.instagram.com/decupandoproducoes/
-              </li>
-              <li><i class="fa fa-github"></i>https://github.com/TiBaT1</li>
+              <li><i class="fa fa-globe"></i>@decupandoproducoes</a></li>
+              <li><i class="fa fa-linkedin"></i>Wying Yang</a></li>
+              <li><i class="fa fa-github"></i>TiBaT1</a></li>
             </ul>
           </div>
           <div class="skills">
@@ -39,11 +51,14 @@
             <ul>
               <li><p>HTML, CSS, Git, & GitHub</p></li>
               <li><p>Pacote Office</p></li>
-              <li><p>Pacote Adobe</p></li>
+              <li><p>Adobe Premiere</p></li>
+              <li><p>Adobe After Effects</p></li>
+              <li><p>Adobe Audition</p></li>
               <li><p>Da Vinci Resolve</p></li>
               <li><p>Final Cut</p></li>
               <li><p>Fotografia</p></li>
               <li><p>Roteiro</p></li>
+              <li><p>Inglês intermediário</p></li>
             </ul>
           </div>
         </div>
@@ -54,11 +69,87 @@
           <section class="about gap">
             <div class="right-title">Sobre Mim</div>
             <p class="about-me-contents">
-              Olá, eu me chamo Wying Yang.<br />
-              <br />Um pouco mais sobre o que faço <br />
-              Quais são minhas competencias
+              <ul>
+                <li>Voluntário no festival “AnimaMundi 2018”, onde atuei no atendimento ao público durante 7 dias, no CCBB; e fui efetivado a estagiário de apoio a produção no “AnimaMundi 2019”, onde atuei novamente com atendimento ao público e coordenando os voluntários da edição;</li>
+                <li><p>Monitor do Núcleo de Criação Audiovisual da faculdade durante dois períodos, onde supervisionei, colaborei e participei de criação de projetos ligados ao audiovisual;</p></li>
+                <li><p>Monitor do laboratório de multimeios do curso de produção cultural, onde colaborava com todos os projetos ligados ao curso;</p></li>
+                <li><p>Produzi o Decupando a Baixada e Decupando o Cinema, dois ciclos de lives falando sobre cinema e produção que foi contemplado pelo edital Aldir Blanc;</p></li>
+                <li><p>Freelance em gravações e edições de cursos como Inglês pra Comex da Significa Cursos, Natureza - oficina de desenho com Chel de Lima e Doçuras Pet, da Quatro Patas Buffet;</p></li>
+                <li><p>Bolsista de Apoio a Edição de Vídeo - PROEXT/UFRRJ entre 2020 e 2021;</p></li>
+                <li><p>Participei da equipe de editores do Reveillon 2022 pela Prefeitura do Rio;</p></li>
+                <li><p>Trabalhei em um total de 8 curtas, sendo 3 deles de minha total autoria.</p></li>
+              </ul>
             </p>
           </section>
+
+          <section class="experience gap">
+            <div class="right-title">Experiencia</div>
+            <div class="experience-contents">
+              <div class="exp-left">
+                <p class="exp-company-name">Contas S.A</p>
+                <p class="exp-time-period">2014-2014</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Auxiliar de Serviços Gerais</p>
+                <p class="exp-desc">
+                  Atendente receptivo de telemarketing; Abertura e apuração de
+                  contestação de contas.
+                </p>
+              </div>
+              <div class="exp-left">
+                <p class="exp-company-name">Sesc Copacabana</p>
+                <p class="exp-time-period">2016-2017</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Jovem Aprendiz</p>
+                <p class="exp-desc">
+                  Assistência a todos os processos de contratação de
+                  espetáculos; assistência a curadoria de filmes para
+                  Cine-Clube; Organização e armazenamento de documentos;
+                  Responsável pela logística de pessoas; Assistência a prestação
+                  de contas; Assistência a projetos próprios do Sesc Copacabana.
+                </p>
+              </div>
+              <div class="exp-left">
+                <p class="exp-company-name">Caseiras Produções</p>
+                <p class="exp-time-period">2019-2019</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Estágiario de Produção</p>
+                <p class="exp-desc">
+                  Auxilio na produção de toda a execução do projeto; Captação de
+                  imagens para projeção de fundo de cena.
+                </p>
+              </div>
+              <div class="exp-left">
+                <p class="exp-company-name">Ponto Cine</p>
+                <p class="exp-time-period">2020-2020</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Estágiario de Produção</p>
+                <p class="exp-desc">
+                  Auxiliei nas funções burocráticas referente à parceria com
+                  patrocinadores e apoiadores; Atuei na pesquisa e inscrições de
+                  editais voltados para o setor do audiovisual; Auxiliei na
+                  gestão das mídias sociais e organização de conteúdo das redes
+                  sociais, como: Instagram, Facebook e Site; Auxiliei na criação
+                  das artes de divulgação dos projetos.
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="education gap">
+            <div class="right-title">Formação Acadêmica</div>
+            <div class="education-contents">
+              <div class="education-left">
+                <p class="education-school-name">IFRJ - Nilópolis</p>
+                <p class="education-time-period">2016-Presente</p>
+              </div>
+              <div class="education-right">
+                <p class="education-subject">Produção Cultural</p>
+                <p class="education-desc">Bacharelado em Produção Cultural</p>
+              </div>
+              <div class="education-left">
         </div>
         <section class="experience gap">
           <div class="right-title">Experiencia</div>
@@ -179,12 +270,10 @@
                 <p class="education-subject">Matemática</p>
                 <p class="education-desc">Bacharelado em Matemática</p>
               </div>
-          </div>
-        </section>
-        <section class="awards gap">
-          <div class="right-title">Cursos
-
-          </div>
+            </div>
+          </section>
+          <section class="awards gap">
+            <div class="right-title">Cursos</div>
             <div class="awards-contents">
               <div class="awards-left">
                 <p class="awards-company-name">SENAC-RIO</p>
@@ -192,9 +281,7 @@
               </div>
               <div class="awards-right">
                 <p class="awards-name">Auxiliar Administrativo</p>
-                <p class="awards-desc">
-                  Curso Técnico
-                </p>
+                <p class="awards-desc">Curso Técnico</p>
               </div>
               <div class="awards-left">
                 <p class="awards-company-name">IFRJ - Nilópolis / Ponto Cine</p>
@@ -202,12 +289,11 @@
               </div>
               <div class="awards-right">
                 <p class="awards-name">Direção Audiovisual</p>
-                <p class="awards-desc">
-                  Curso de Extensão
-                </p>
+                <p class="awards-desc">Curso de Extensão</p>
               </div>
             </div>
-        </section>
+          </section>
+        </div>
       </section>
     </main>
   </body>
